tests/org.eclipse.php.core.tests/workspace/errors/php7/callbackWithReference.pdtt
--TEST--
Callback with reference
--FILE--
<?php
$fct = function ($val) use (&$fct, $another) {
    return $fct($val + 1);
};
--EXPECT--
[line=2, start=41, end=49] Variable '$another' is undefined
